platform/ingress/rollout-demo/rollout-canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollout-canary-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: argorolloutcanary.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rollouts-canary-svc
                port:
                  number: 80
